--- a/style.css
+++ b/style.css
@@ -35,8 +35,6 @@ p{
 }
 
 .icon:hover{
-	width:11%;
-	height:auto;
 	border-radius:100%;
 	box-shadow: 0px 0px 50px #fff;
 }
@@ -78,6 +76,90 @@ p{
 	text-align: justify;
 	padding: 0 3% 0 3%;
 }
+
+/*partie boutons flottants*/
+.boutonInfo{
+	margin-top: 4%;
+	display: flex;
+	justify-content: center;
+	align-items:center;
+	flex-direction: column;
+}
+
+.boutonInfo a {
+	font-size:20px;
+	position:relative;
+	display:inline-block;
+	padding: 25px;
+	margin:30px 0;
+	color:#EEEBEB;
+	text-decoration: none;
+	background:grey;
+	overflow:hidden;
+	animation: flotter 4s linear infinite;
+}
+
+@keyframes flotter{
+	0%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+	50%{
+		margin-top:20px;
+		margin-bottom:0%;
+	}
+	100%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+}
+
+.boutonInfo a:hover{
+	background-color: transparent;
+	background-image:url("./image/acier.jpg");
+}
+
+.boutonInfo a span{
+	position:absolute;
+	display:block;
+}
+
+
+.boutonInfo a span:nth-child(1){
+	top:0;
+	left:100%;
+	width:100%;
+	height:3px;
+	background:linear-gradient(-90deg, transparent, red);
+	animation: animate1 3s linear infinite;
+}
+
+@keyframes animate1{
+	0%{
+		left:100%;
+	}
+	50%,100%{
+		left:-100%;
+	}
+}
+
+.boutonInfo a span:nth-child(2){
+	bottom:0;
+	left:100%;
+	width:100%;
+	height:3px;
+	background:linear-gradient(-90deg, transparent, red);
+	animation: animate1 3s linear infinite;
+}
+
+
+
+
+
+
+
+
+
 
 /* animation */
 
