--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ p{
 	text-decoration: none;
 	background:grey;
 	overflow:hidden;
+	box-shadow: 20px 0px 10px 0 #402A2A;
 	animation: flotter 4s linear infinite;
 }
 
@@ -105,13 +106,17 @@ p{
 		margin-bottom:3%;
 	}
 	50%{
-		margin-top:20px;
+		margin-top:2%;
 		margin-bottom:0%;
 	}
 	100%{
 		margin-top:0px;
 		margin-bottom:3%;
 	}
+}
+
+.boutonInfo a:nth-child(1){
+	filter:hue-rotate(240deg);/*changement de couleur*/
 }
 
 .boutonInfo a:hover{
@@ -130,7 +135,7 @@ p{
 	left:100%;
 	width:100%;
 	height:3px;
-	background:linear-gradient(-90deg, transparent, red);
+	background:linear-gradient(-90deg, transparent, purple);
 	animation: animate1 3s linear infinite;
 }
 
@@ -148,7 +153,7 @@ p{
 	left:100%;
 	width:100%;
 	height:3px;
-	background:linear-gradient(-90deg, transparent, red);
+	background:linear-gradient(-90deg, transparent, purple);
 	animation: animate1 3s linear infinite;
 }
 
