--- a/CSS/styleAccueil.css
+++ b/CSS/styleAccueil.css
@@ -1,16 +1,16 @@
 body{
-	background-image: url("./image/repSpace.png");
+	background-image: url("../image/repSpace.png");
 	background-repeat: repeat-x;
 	color:white;
 	font-family: "Gill Sans", sans-serif;
 }
 
 h1{
-	font-size: 3vw;
+	font-size: 34px;
 }
 
 h2{
-	font-size: 2vw;
+	font-size: 24px;
 	margin-bottom: 3%;
 }
 
@@ -32,6 +32,17 @@ p{
 .icon{
 	width:10%;
 	height:auto;
+}
+
+#CV{
+	font-size: 40px;
+	font-style: bold;
+	text-decoration: none;
+	width:50px;
+	height:100%;
+	color:white;
+	background-color: black;
+	border-radius:25px;
 }
 
 .icon:hover{
@@ -79,7 +90,7 @@ p{
 
 /*partie boutons flottants*/
 .boutonInfo{
-	margin-top: 4%;
+	margin-top: 3%;
 	display: flex;
 	justify-content: center;
 	align-items:center;
@@ -97,7 +108,7 @@ p{
 	background-color: rgba(54, 54, 54, 0.5);
 	overflow:hidden;
 	box-shadow: 20px 0px 10px -4px purple;
-	animation: flotter 4s linear infinite;
+	animation: flotter 4.5s linear infinite;
 	border-radius: 8px 0 0 8px;
 }
 
@@ -122,7 +133,7 @@ p{
 
 .boutonInfo a:hover{
 	background-color: transparent;
-	background-image:url("./image/acier.jpg");
+	background-image:url("../image/acier.jpg");
 }
 
 .boutonInfo a span{
@@ -162,12 +173,7 @@ p{
 
 
 
-
-
-
-
-
-/* animation */
+/* animation du background*/
 
 @keyframes defile {
 	  0% { 
