--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -1,11 +1,16 @@
 body{
-	/*background-image: url("../image/repSpace.png");*/
-	color:white;
+	background-image: url("../image/planeteLac.jpg");
+  	background-repeat: no-repeat; 
+  	background-size:cover;
+  	color:white;
 	font-family: "Gill Sans", sans-serif;
+	text-align: center;
+	height:100%;
 }
 
 h1{
 	font-size: 34px;
+	font-style:bold;
 }
 
 h2{
@@ -18,6 +23,23 @@ p{
 	font-size: 1vw;
 	line-height: 2em;
 }
+
+#titre{
+	margin-top:2%;
+	margin-bottom:3%;
+}
+
+#listeFormation{
+	padding:15px 0;
+}
+
+.formation{
+	background-color:rgba(0, 0, 0, 0.5);
+	width:60%;
+	margin: 0 auto;
+	border-radius: 18px;
+}
+
 
 /* responsive */
 @media only screen and (max-width: 450px) {
