--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -1,11 +1,7 @@
 body{
-	background-image: url("../image/planeteLac.jpg");
-  	background-repeat: no-repeat; 
-  	background-size:cover;
   	color:white;
 	font-family: "Gill Sans", sans-serif;
 	text-align: center;
-	height:100%;
 }
 
 h1{
@@ -24,9 +20,24 @@ p{
 	line-height: 2em;
 }
 
+.parallax {
+  /* The image used */
+  	background-image: url("../image/planeteLac.jpg");
+
+  /* Set a specific height */
+  	min-height: 100vh; 
+
+  /* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat; 
+}
+
 #titre{
-	margin-top:2%;
-	margin-bottom:3%;
+	margin:0px 0px 0px 125px;
+	padding-top:2%;
+	margin-bottom:2.5%;
+
 }
 
 #listeFormation{
@@ -40,6 +51,84 @@ p{
 	border-radius: 18px;
 }
 
+/* bouton de retour à l'accueil */
+#accueil{
+	float:right;
+	vertical-align: top;
+	margin:8px 20px 0px 0px;
+}
+
+#accueil a {
+	font-size:24px;
+	position:relative;
+	display:inline-block;
+	padding: 20px;
+	margin:30px 0;
+	color:#EEEBEB;
+	text-decoration: none;
+	background-image: linear-gradient(to top left, rgba(0,0,0,0.8), rgba(48,44,44,0.7));
+	overflow:hidden;
+	box-shadow: 20px 0px 10px -4px purple;
+	animation: flotter 8s linear infinite;
+	border-radius: 8px 0 0 8px;
+}
+
+@keyframes flotter{
+	0%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+	50%{
+		margin-top:2.5%;
+		margin-bottom:0%;
+	}
+	100%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+}
+
+#accueil a:nth-child(1){
+	filter:hue-rotate(240deg);/*changement de couleur*/
+}
+
+#accueil a:hover{
+	background-color: transparent;
+	background-image:url("../image/acier.jpg");
+}
+
+#accueil a span{
+	position:absolute;
+	display:block;
+}
+
+
+#accueil a span:nth-child(1){
+	top:0;
+	left:100%;
+	width:100%;
+	height:4px;
+	background:linear-gradient(-90deg, transparent, purple);
+	animation: animate1 3s linear infinite;
+}
+
+@keyframes animate1{
+	0%{
+		left:100%;
+	}
+	50%,100%{
+		left:-100%;
+	}
+}
+
+#accueil a span:nth-child(2){
+	bottom:0;
+	left:100%;
+	width:100%;
+	height:4px;
+	background:linear-gradient(-90deg, transparent, purple);
+	animation: animate1 3s linear infinite;
+}
 
 /* responsive */
 @media only screen and (max-width: 450px) {
