--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -44,12 +44,45 @@ p{
 	padding:15px 0;
 }
 
-.formation{
+#listeFormation .formation{
 	background-color:rgba(0, 0, 0, 0.5);
 	width:60%;
-	margin: 0 auto;
+	margin: 0 auto 18px auto;
+	padding:8px;
 	border-radius: 18px;
+	border: 4px solid white;
+	filter:url(#vague);
 }
+
+.infoFormation{
+	padding:10px;
+	position:relative;
+	z-index: 2px;
+}
+
+/* effet de vagues sur les formations */
+svg{
+	width:0;
+	height:0;
+}
+
+#listeFormation .formation:hover{
+	filter:none;
+	animation: ombre 10s infinite;
+}
+
+@keyframes ombre{
+	0%{
+		box-shadow: 20px 0px 10px -4px white;
+	}
+	50%{
+		box-shadow: -20px 0px 10px -4px white;
+	}
+	100%{
+		box-shadow: 20px 0px 10px -4px white;
+	}
+}
+
 
 /* bouton de retour à l'accueil */
 #accueil{
