--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -15,7 +15,6 @@ h2{
 }
 
 p{
-	
 	font-size: 1vw;
 	line-height: 2em;
 }
@@ -31,6 +30,7 @@ p{
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat; 
+	background-size: cover;
 }
 
 #titre{
@@ -47,7 +47,7 @@ p{
 #listeFormation .formation{
 	background-color:rgba(0, 0, 0, 0.5);
 	width:60%;
-	margin: 0 auto 18px auto;
+	margin: 0 auto 50px auto;
 	padding:8px;
 	border-radius: 18px;
 	border: 4px solid white;
@@ -58,6 +58,39 @@ p{
 	padding:10px;
 	position:relative;
 	z-index: 2px;
+}
+
+.details{
+	display:flex;
+	flex-direction:row;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	space-between:space-around;
+	align-items:baseline;
+}
+
+.bloc{
+	width:400px;
+	padding:8px;
+	text-align: center;
+	border-radius: 25px;
+	background-color:rgba(250, 250, 250, 0.5);
+	color:rgba(0, 0, 0, 0.5);
+	font-weight:bold;
+	font-size:50px;
+	margin:10px;
+	transition:0.5s;
+}
+
+.bloc p{
+	color:rgba(0, 0, 0, 0.5);
+	font-weight:bold;
+	font-size:18px;
+}
+
+.bloc:hover{
+	color:rgba(0, 0, 0, 1);
+	background-color:rgba(250, 250, 250, 0.8);
 }
 
 /* effet de vagues sur les formations */
@@ -163,6 +196,9 @@ svg{
 	background:linear-gradient(-90deg, transparent, purple);
 	animation: animate1 3s linear infinite;
 }
+
+
+
 
 /* responsive */
 @media only screen and (max-width: 450px) {
