--- a/CSS/styleCompetences.css
+++ b/CSS/styleCompetences.css
@@ -1,3 +1,7 @@
+html { 
+	overflow-y: hidden; 
+} 
+
 body{
 	/*background-image: url("../image/repSpace.png");*/
 	color:white;
@@ -17,6 +21,118 @@ p{
 	
 	font-size: 1vw;
 	line-height: 2em;
+}
+
+.parallax {
+  /* The image used */
+  	background-image: url("../image/planete.jpg");
+
+  /* Set a specific height */
+  	min-height: 100vh; 
+
+  /* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat; 
+	background-size: cover;
+}
+
+#titre{
+	text-align:center;
+	margin:0px 0px 0px 125px;
+	padding-top:2%;
+	margin-bottom:2.5%;
+}
+
+#container{
+	display:flex;
+	flex-direction:column;
+	justify-content: space-evenly;
+	space-between:space-around;
+	align-items:baseline;
+}
+
+.typeCompetence{
+
+}
+
+/* bouton accueil */
+#accueil{
+	float:right;
+	vertical-align: top;
+	margin:8px 20px 0px 0px;
+}
+
+#accueil a {
+	font-size:24px;
+	position:relative;
+	display:inline-block;
+	padding: 20px;
+	margin:30px 0;
+	color:#EEEBEB;
+	text-decoration: none;
+	background-image: linear-gradient(to top left, rgba(0,0,0,0.8), rgba(48,44,44,0.7));
+	overflow:hidden;
+	box-shadow: 20px 0px 10px -4px purple;
+	animation: flotter 8s linear infinite;
+	border-radius: 8px 0 0 8px;
+}
+
+@keyframes flotter{
+	0%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+	50%{
+		margin-top:2.5%;
+		margin-bottom:0%;
+	}
+	100%{
+		margin-top:0px;
+		margin-bottom:3%;
+	}
+}
+
+#accueil a:nth-child(1){
+	/*filter:hue-rotate(240deg);*//*changement de couleur*/
+}
+
+#accueil a:hover{
+	background-color: transparent;
+	background-image:url("../image/acier.jpg");
+}
+
+#accueil a span{
+	position:absolute;
+	display:block;
+}
+
+
+#accueil a span:nth-child(1){
+	top:0;
+	left:100%;
+	width:100%;
+	height:4px;
+	background:linear-gradient(-90deg, transparent, purple);
+	animation: animate1 3s linear infinite;
+}
+
+@keyframes animate1{
+	0%{
+		left:100%;
+	}
+	50%,100%{
+		left:-100%;
+	}
+}
+
+#accueil a span:nth-child(2){
+	bottom:0;
+	left:100%;
+	width:100%;
+	height:4px;
+	background:linear-gradient(-90deg, transparent, purple);
+	animation: animate1 3s linear infinite;
 }
 
 /* responsive */
