--- a/CSS/styleAccueil.css
+++ b/CSS/styleAccueil.css
@@ -16,7 +16,7 @@ h2{
 
 p{
 	
-	font-size: 1vw;
+	font-size: 16px;
 	line-height: 2em;
 }
 
@@ -105,7 +105,7 @@ p{
 	font-size:24px;
 	position:relative;
 	display:inline-block;
-	padding: 33px;
+	padding: 28px;
 	margin:30px 0;
 	color:#EEEBEB;
 	text-decoration: none;
@@ -193,14 +193,71 @@ body {
 }	
 
 
+
+
 /* responsive */
 @media only screen and (max-width: 450px) {
+	h1{
+		font-size: 30px;
+	}
+
+	h2{
+		font-size: 20px;
+		margin-bottom: 3%;
+	}
+
+	p{
+		
+		font-size: 12px;
+		line-height: 2em;
+	}
+
 	#structure{
-		width: 95%;
+		width: 90%;
+		margin-right: auto;
+		margin-left:auto;
 		background-color: transparent;
+		padding-top:2%;
 	}
 
 	#carte{
 		width: 100%;
 	}
+
+	.icon{
+		width:15%;
+		height:auto;
+	}
+
+	/*partie boutons flottants*/
+	.boutonInfo{
+		margin-top: 5%;
+		display: flex;
+		justify-content: center;
+		align-items:center;
+		flex-direction: column;
+	}
+
+	.boutonInfo a {
+		font-size:22px;
+		padding: 28px;
+		margin:30px 0;
+			animation: flotter 6s linear infinite;
+	}
+
+	@keyframes flotter{
+		0%{
+			margin-top:0px;
+			margin-bottom:6%;
+		}
+		50%{
+			margin-top:5.5%;
+			margin-bottom:0%;
+		}
+		100%{
+			margin-top:0px;
+			margin-bottom:6%;
+		}
+	}
+
 }
