--- a/CSS/styleCompetences.css
+++ b/CSS/styleCompetences.css
@@ -21,7 +21,7 @@ h2{
 
 p{
 	
-	font-size: 1vw;
+	font-size: 16px;
 	line-height: 2em;
 }
 
@@ -198,7 +198,8 @@ p{
 	#accueil a {
 		font-size:20px;
 		padding: 15px;
-		animation: flotter 7s linear infinite;
+		animation: none;
+		margin:0;
 	}
 
 	.logo{
