--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -19,7 +19,7 @@ h2{
 }
 
 p{
-	font-size: 1vw;
+	font-size: 16px;
 	line-height: 2em;
 }
 
@@ -47,6 +47,10 @@ p{
 	padding:15px 0;
 }
 
+#listeFormationResp{
+	display:none;
+}
+
 #listeFormation .formation{
 	background-color:rgba(0, 0, 0, 0.5);
 	width:60%;
@@ -54,7 +58,14 @@ p{
 	padding:8px;
 	border-radius: 18px;
 	border: 4px solid white;
-	filter:url(#vague);
+
+}
+
+/* application du filtre uniquement pour les pc */
+@media only screen and (min-width: 720px) {
+	#listeFormation .formation{
+		filter:url(#vague);
+	}
 }
 
 
@@ -205,12 +216,23 @@ svg{
 
 /* responsive */
 @media only screen and (max-width: 450px) {
-	#structure{
-		width: 95%;
-		background-color: transparent;
+	.clear{
+		clear:both;
 	}
 
-	#carte{
-		width: 100%;
+	#titre{
+		margin: 0 0 5% 0;
 	}
+
+	#accueil a {
+		font-size:20px;
+		padding: 15px;
+		animation: none;
+		margin:0;
+	}
+
+	#listeFormation .formation{
+		width:85%;
+	}
+
 }
