mise à jour licence

--- a/CSS/styleFormations.css
+++ b/CSS/styleFormations.css
@@ -64,7 +64,7 @@ p{
 /* application du filtre uniquement pour les pc */
 @media only screen and (min-width: 720px) {
 	#listeFormation .formation{
-		filter:url(#vague);
+		/*filter:url(#vague);*/
 	}
 }
 
